--- a/Zoo/.project
+++ b/Zoo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Biblioteca</name>
+	<name>Zoo</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1745926478647</id>
+			<id>1745926478662</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
